Sun Aug 15 19:59:58 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/webrick/httpresponse.rb (WEBrick::HTTPResponse#set_error):
	  Fix for possible cross-site scripting (CVE-2010-0541). 
	  Found by Apple, reported by Hideki Yamane.
	  Patch by Hirokazu Nishio <nishio.hirokazu AT gmail.com>.

Sat Jul 17 15:19:58 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Change AC_PREREQ from 2.58 to 2.60 because
	  AC_CASE macro require 2.60 or later. Thanks, Mitsuru SHIMAMURA.
	  [Bug #3579] [ruby-dev:41856]

Wed Jun 23 22:22:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/optparse/test_summary.rb: fixed superclass so that it run
	  solely.

Wed Jun 23 21:54:17 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* marshal.c, test/ruby/test_marshal.rb: Revert r25230.  This test
	  is troublesome.

Mon Jun 21 18:12:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/extconf.rb: check some functions added at OpenSSL 1.0.0.

	* ext/openssl/ossl_engine.c (ossl_engine_s_load): use engines which
	  exists.

Mon Jun 21 18:12:15 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_config.c: defined own IMPLEMENT_LHASH_DOALL_ARG_FN_098
	  macro according to IMPLEMENT_LHASH_DOALL_ARG_FN in OpenSSL 0.9.8m.
	  OpenSSL 1.0.0beta5 has a slightly different definiton so it could
	  be a temporal workaround for 0.9.8 and 1.0.0 dual support.

	* ext/openssl/ossl_pkcs5.c (ossl_pkcs5_pbkdf2_hmac): follows function
	  definition in OpenSSL 1.0.0beta5. PKCS5_PBKDF2_HMAC is from 1.0.0
	  (0.9.8 only has PKCS5_PBKDF2_HMAC_SHA1)

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_eq): do not use
	  SSL_SESSION_cmp and implement equality func by ousrself.  See the
	  comment.

Mon Jun 21 18:12:15 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl_session.c
	  (ossl_ssl_session_{get,set}_time{,out}): fixed a bug introduced by
	  backporting. (see [ruby-dev:40573])  use long in according to