@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2010-08-16"
+#define RUBY_RELEASE_DATE "2010-11-22"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20100816
-#define RUBY_PATCHLEVEL 302
+#define RUBY_RELEASE_CODE 20101122
+#define RUBY_PATCHLEVEL 303
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2010
-#define RUBY_RELEASE_MONTH 8
-#define RUBY_RELEASE_DAY 16
+#define RUBY_RELEASE_MONTH 11
+#define RUBY_RELEASE_DAY 22
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
